--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
   <div class="page">
 
     <header>
-      <a class="site-name" href="#">Your Name</a>
+      <a class="site-name" href="#">LIFESTEAD</a>
       <h1>Articles</h1>
       <p class="subtitle">Writing on design, technology, and the way we work — collected since 2021.</p>
     </header>
