--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
     <main>
 
       <div class="year-group">
-        <div class="year-label">2025</div>
+        <div class="year-label">2026</div>
         <ul>
           <li><a href="#">The quiet power of constraints in creative work</a></li>
           <li><a href="#">What I learned shipping a side project in a weekend</a></li>
@@ -229,7 +229,7 @@
     </main>
 
     <footer>
-      © 2025 Your Name
+      © 2026 Lifestead
     </footer>
 
   </div>
