--- a/index.html
+++ b/index.html
@@ -167,6 +167,10 @@
 
     <header>
       <a class="site-name" href="#">Lifestead</a>
+      <nav style="margin-bottom: 3rem;">
+  <a href="/about" style="font-size: 0.85rem; color: #888; text-decoration: none; margin-right: 1.25rem;">About</a>
+  <a href="/" style="font-size: 0.85rem; color: #888; text-decoration: none;">Articles</a>
+</nav>
       <h1>Articles</h1>
       <p class="subtitle">Writing on design, technology, and the way we work — collected since 2021.</p>
     </header>
