--- a/index.html
+++ b/index.html
@@ -169,11 +169,11 @@
       <a class="site-name" href="#">Lifestead</a>
       <div style="display: flex; gap: 0.75rem; margin-bottom: 3rem;">
 
-  <a href="https://www.instagram.com/lifesteadco" style="color: #888; text-decoration: none; font-size: 0.85rem; transition: color 0.15s;" onmouseover="this.style.color='#c0392b'" onmouseout="this.style.color='#888'">Instagram</a>
+  <a href="https://www.instagram.com/lifesteadco" target="_blank" style="color: #888; text-decoration: none; font-size: 0.85rem; transition: color 0.15s;" onmouseover="this.style.color='#c0392b'" onmouseout="this.style.color='#888'">Instagram</a>
 
   <span style="color: #e8e4df;">·</span>
 
-  <a href="https://www.youtube.com/@Lifestead" style="color: #888; text-decoration: none; font-size: 0.85rem; transition: color 0.15s;" onmouseover="this.style.color='#c0392b'" onmouseout="this.style.color='#888'">YouTube</a>
+  <a href="https://www.youtube.com/@Lifestead" target="_blank" style="color: #888; text-decoration: none; font-size: 0.85rem; transition: color 0.15s;" onmouseover="this.style.color='#c0392b'" onmouseout="this.style.color='#888'">YouTube</a>
 
 </div>
       <p class="subtitle">Notes on simplicity, craft, and finding yourself in the process.</p>
